<resources>
    <string name="app_name">TPOAndroidTaTeTi</string>
    <string name="jugar">Jugar</string>
    <string name="nombre">Ingresa tu nombre: </string>
    <string name="aceptar">Aceptar</string>
    <string name="jugadorPrimero">Vas primero.</string>
    <string name="turnoJugador">Tu turno.</string>
    <string name="turnoIA">Turno de la IA.</string>
    <string name="resultadoEmpate">Empate!</string>
    <string name="resultadoGanoJugador">Ganaste!</string>
    <string name="resultadoGanoIA">Perdiste!</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="info">Info</string>
    <string name="jugador">Jugador: </string>
    <string name="empate">Empates: </string>
    <string name="ia">IA: </string>
    <string name="volverJugar">Volver a Jugar </string>
    <string name="salir">Salir</string>
    <string name="ranking">Ranking </string>
    <string name="musica">Musica ON</string>
    <string name="musicaDos">Musica OFF</string>


</resources>
